--- a/Analysis/Recommendation_System.Rmd
+++ b/Analysis/Recommendation_System.Rmd
@@ -34,10 +34,24 @@ setnames(dat, old = c('get','get.1','V1'), new = c('Taster Name','Variety','Poin
 
 ```
 
-```{r real rating class}
+```{r}
 # convert into a s4 class 
 data_matrix <- as(dat, 'realRatingMatrix')
 image(data_matrix[1:19,1:50])
+
+```
+
+## Popular methods 
+
+```{r}
+recommenderRegistry$get_entry("POPULAR", type ="realRatingMatrix")
+
+# recommendation for normal data 
+recom <- Recommender(data_matrix,method='POPULAR',parameter = list(normalize=NULL))
+pred <- predict(recom,data_matrix, n = 5)
+
+data.frame(mapply(c, getList(pred), getRatings(pred)))
+
 ```
 
 ```{r train and test split}
@@ -51,7 +65,19 @@ test <- data_matrix[-split,]
 mean(getRatings(data_matrix), na.rm = TRUE)
 ```
 
-Calculate a similarity matrix 
+
+```{r}
+recommenderRegistry$get_entry('UBCF', type = 'realRatingMatrix')
+# recommendation for normal data 
+recom4 <- Recommender(data_matrix,method='UBCF',parameter = list(method = 'Cosine'))
+pred4 <- predict(recom4,data_matrix, type = 'ratingMatrix',n = 5)
+
+as.data.frame(mapply(c, getList(pred4), 
+                     getRatings(pred4), 
+                     as.list(rowMeans(data_matrix, na.rm = TRUE))))
+```
+
+Calculatea a similarity matrix 
 
 ```{r similarity matrix}
 
@@ -64,66 +90,6 @@ round(similarity(normalize(train[1:7]),method = 'cosine'),3)
 # similarity matrix using the pearson distance
 round(similarity(normalize(train[1:7]),method = 'pearson'),3)
 ```
-
-
-# User Based Collaborative Filter: 
-
-
-```{r UBCF}
-recommenderRegistry$get_entry('UBCF', type = 'realRatingMatrix')
-
-recom.ubcf <- Recommender(train,method='UBCF',parameter = list(method = 'Cosine'))
-pred.ubcf <- predict(recom.ubcf,train,n = 1)
-
-as.data.frame(mapply(c, 'Wine Recommendation' = getList(pred.ubcf), 
-                     'Wine Rating' = getRatings(pred.ubcf),
-                     'Avg Rating' = as.list(rowMeans(train))))
-
-```
-
-## Popular Methods 
-
-```{r Popular Method}
-recommenderRegistry$get_entry("POPULAR", type ="realRatingMatrix")
-
-# recommendation for normal data 
-recom.popular <- Recommender(train,method='POPULAR')
-pred.popular <- predict(recom.popular,data_matrix, n = 1)
-
-# top recommendation 
-data.frame(mapply(c, 'Wine Recommendation' = getList(pred.popular), 
-                  'Wine Rating' = getRatings(pred.popular),
-                     'Avg Rating' = as.list(rowMeans(train))))
-
-```
-
-Item-based Collaborative Filtering
-
-```{r}
-
-recommenderRegistry$get_entry('IBCF', type = 'realRatingMatrix')
-
-recom.ibcf <- Recommender(train,method='IBCF')
-pred.ibcf <- predict(recom.ubcf,train, n = 1)
-
-as.data.frame(mapply(c, 'Receommendatoin' = getList(pred.ibcf), 
-                     'Wine Rating' = getRatings(pred.ibcf),
-                     'Avg Rating' = as.list(rowMeans(train))))
-
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
